backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wings-of-capital-ingress
  namespace: wings-of-capital
spec:
  ingressClassName: nginx
  rules:
    - host: wings-of-capital.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-proxy
                port:
                  number: 8000
